# Backend-Aidan

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 16f9d432280d_create_users_table.py  e4ba215d39c0_test_alembic.py
app/: main.py
app/api/v1/: users.py
app/core/: config.py  http_cliente.py
app/db/: base.py  session.py
app/models/: market.py  nfe.py  product.py  product_price.py  profile.py  user.py
app/schemas/: nfe_data.py  product.py  profile.py  user.py
app/security/: password.py
app/services/: nfe_import_service.py  user_services.py
app/services/clients/: nfe_client.py
app/services/extractors/: base_extractor.py
tests/: conftest.py
tests/models/: test_profile_model.py  test_user_model.py
tests/schemas/: test_user_schema.py
tests/services/: test_user_service.py  test_user_service_profile.py
