[project]
name = "aidan-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Sprocati",email = "ricardosprocatioliveira@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.125.0,<0.126.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "passlib (==1.7.4)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (==4.0.1)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.22.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
